# kn_crafting_intepreters

Lesson 10/chapter 20/: table.c  table.h
Lesson 4/Ch.9/: q3.java
Lesson 5/: q2.java
Lesson 5/Ch.11/: q3.java
Lesson 6/Ch.13/: q1.java  q3.java
Lesson 7/Ch.14/question 1/: chunk.c  chunk.h
Lesson 7/Ch.14/question 2/: chunk.c  chunk.h  debug.c
Lesson 7/Ch.14/question 3/: main_hardcore.c  memory_hardcore.c  memory_hardcore.h
Lesson 7/Ch.15/: CMakeLists.txt  README.md
Lesson 9/Chapter 19/: code.c
zLesson 11/chapter 23/: q1.c  q2.c
zLesson 13/chapter 26/: q3.c
zLesson 13/chapter 27/: q1.c  q2.c  q3.c
